fixed contact bar image overflow and font issues.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -323,12 +323,12 @@ html {
     //padding-top: 7px;
     transition: 500ms;
     opacity: 0;
-    font-size: 1.7rem ;
+    font-size: 2.5rem ;
     .text, .github, .email, .ig {
         //display: inline-block;
-        margin: 5px 0px;
+        margin: 0.5 rem 0px;
         width: fit-content;
-        height: 5rem;
+        height: 7rem;
         text-align: center;
       }
       
